<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >
    
    
    <ImageView
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="6dip"
        android:contentDescription="@string/geofence"
        android:src="@drawable/ic_list" />
    
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" 
    android:orientation="vertical"
    android:layout_alignParentRight="true"
    android:layout_toRightOf="@id/icon">
    

    <TextView
        android:id="@+id/geofence_id_line"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/geofence_id"
        android:textSize="16sp" />
    
    <TextView
        android:id="@+id/geofence_description_line"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ellipsize="marquee"
        android:singleLine="true"
        android:text="@string/geofence_description"
        android:textSize="12sp" />
    
</LinearLayout>
</RelativeLayout>


 <!--  <TextView
     	xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/firstLine"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_alignWithParentIfMissing="true"
        android:layout_toRightOf="@id/icon"
        android:gravity="center_vertical"
        android:text="@string/geofence_id"
        android:textSize="16sp" />-->

